--- a/Using Pandas (PDS)/Lab_05_Q1_to_Q11_StudentCopy.ipynb
+++ b/Using Pandas (PDS)/Lab_05_Q1_to_Q11_StudentCopy.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "84200a71",
    "metadata": {},
    "outputs": [],
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "id": "8fac9506",
    "metadata": {},
    "outputs": [
@@ -484,14 +484,14 @@
        "CH   China    Beijing   9.597      1357.0"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Type your Q5 answer here, there are many ways to achieve the selection.\n",
-    "\n"
+    "brics.iloc[1:4]\n"
    ]
   },
   {
@@ -508,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "id": "b995cf94",
    "metadata": {},
    "outputs": [
@@ -564,14 +564,14 @@
        "IN   India  New Delhi   3.286      1252.0"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Type your Q6 answer here\n",
-    "\n"
+    "brics.loc[\"RU\":\"IN\"]\n"
    ]
   },
   {
@@ -940,7 +940,7 @@
    "outputs": [],
    "source": [
     "# Import your Dataset from \"temperatures.csv\" into DataFrame known as temperatures\n",
-    "\n"
+    "temperatures=pd.read_csv('temperatures.csv')\n"
    ]
   },
   {
