--- a/Using Pandas (PDS)/Lab_05_Q12_to_Q15_StudentCopy.ipynb
+++ b/Using Pandas (PDS)/Lab_05_Q12_to_Q15_StudentCopy.ipynb
@@ -1375,15 +1375,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "id": "448fd72e-063b-4ec6-8196-90b7266a484e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "total orders: 100,\n",
+      "unique products: ['Monitor' 'Keyboard' 'Laptop' 'Blender' 'Headphones' 'Smartphone'\n",
+      " 'Coffee Maker' 'Air Fryer'],\n",
+      "category: ['Electronics' 'Appliances']\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Question 14(a) - Type your answers here\n",
     "\n",
     "# Display total number of orders, unique products, and categories\n",
-    "total_orders=count(ecommerce)"
+    "total_orders=ecommerce['Order_ID'].count()\n",
+    "unique_products=ecommerce['Product'].unique()\n",
+    "category=ecommerce['Category'].unique()\n",
+    "print(f'''\n",
+    "total orders: {total_orders},\n",
+    "unique products: {unique_products},\n",
+    "category: {category}\n",
+    "''')"
    ]
   },
   {
@@ -1396,17 +1416,124 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 52,
    "id": "8905a1f2-64ae-4f4c-b61c-06a6547d112d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Order_ID</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Product</th>\n",
+       "      <th>Category</th>\n",
+       "      <th>Quantity</th>\n",
+       "      <th>Unit_Price</th>\n",
+       "      <th>Total Revenue</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>31</td>\n",
+       "      <td>2023-06-01</td>\n",
+       "      <td>Monitor</td>\n",
+       "      <td>Electronics</td>\n",
+       "      <td>4</td>\n",
+       "      <td>459.46</td>\n",
+       "      <td>1837.84</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>100</td>\n",
+       "      <td>2023-06-02</td>\n",
+       "      <td>Keyboard</td>\n",
+       "      <td>Electronics</td>\n",
+       "      <td>1</td>\n",
+       "      <td>888.88</td>\n",
+       "      <td>888.88</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>28</td>\n",
+       "      <td>2023-06-02</td>\n",
+       "      <td>Laptop</td>\n",
+       "      <td>Electronics</td>\n",
+       "      <td>1</td>\n",
+       "      <td>298.24</td>\n",
+       "      <td>298.24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>89</td>\n",
+       "      <td>2023-06-02</td>\n",
+       "      <td>Blender</td>\n",
+       "      <td>Appliances</td>\n",
+       "      <td>3</td>\n",
+       "      <td>310.58</td>\n",
+       "      <td>931.74</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>23</td>\n",
+       "      <td>2023-06-02</td>\n",
+       "      <td>Laptop</td>\n",
+       "      <td>Electronics</td>\n",
+       "      <td>2</td>\n",
+       "      <td>675.61</td>\n",
+       "      <td>1351.22</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Order_ID        Date   Product     Category  Quantity  Unit_Price  \\\n",
+       "0        31  2023-06-01   Monitor  Electronics         4      459.46   \n",
+       "1       100  2023-06-02  Keyboard  Electronics         1      888.88   \n",
+       "2        28  2023-06-02    Laptop  Electronics         1      298.24   \n",
+       "3        89  2023-06-02   Blender   Appliances         3      310.58   \n",
+       "4        23  2023-06-02    Laptop  Electronics         2      675.61   \n",
+       "\n",
+       "   Total Revenue  \n",
+       "0        1837.84  \n",
+       "1         888.88  \n",
+       "2         298.24  \n",
+       "3         931.74  \n",
+       "4        1351.22  "
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Question 14(b) - Type your answers here\n",
     "\n",
     "# Create 'Total_Revenue' column\n",
+    "ecommerce[\"Total Revenue\"]=ecommerce[\"Quantity\"]*ecommerce[\"Unit_Price\"]\n",
     "\n",
-    "\n",
-    "# Display the first five rows with the new column\n"
+    "# Display the first five rows with the new column\n",
+    "ecommerce.head()"
    ]
   },
   {
