--- a/Text Feature Engineering (NLP)/practical.ipynb
+++ b/Text Feature Engineering (NLP)/practical.ipynb
@@ -2547,7 +2547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2557,14 +2557,14 @@
     " 'I will have a chai latte with milk',\n",
     " 'There is a hot sale today']\n",
     "\n",
-    "cv=CountVectorizer(stop_words='english')\n",
+    "cv=CountVectorizer(lowercase=True,stop_words='english')\n",
     "X=cv.fit_transform(corpus).toarray()\n",
     "dt=pd.DataFrame(X,columns=cv.get_feature_names_out())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -2601,30 +2601,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "9 : 0.28868\n",
-      "9 : 0.40825\n",
-      "9 : 0.0\n",
-      "9 : 0.33333\n",
-      "9 : 0.35355\n",
-      "9 : 0.28868\n",
-      "9 : 0.28868\n",
-      "9 : 0.0\n",
-      "9 : 0.40825\n",
-      "9 : 0.0\n"
+      "\n",
+      "String: The weather is hot under the sun\n",
+      "Stirng: I make my hot chocolate with milk\n",
+      "Cosine Similarity: 0.28868\n",
+      "\n",
+      "\n",
+      "String: The weather is hot under the sun\n",
+      "Stirng: One hot encoding\n",
+      "Cosine Similarity: 0.40825\n",
+      "\n",
+      "\n",
+      "String: The weather is hot under the sun\n",
+      "Stirng: I will have a chai latte with milk\n",
+      "Cosine Similarity: 0.0\n",
+      "\n",
+      "\n",
+      "String: The weather is hot under the sun\n",
+      "Stirng: There is a hot sale today\n",
+      "Cosine Similarity: 0.33333\n",
+      "\n",
+      "\n",
+      "String: I make my hot chocolate with milk\n",
+      "Stirng: One hot encoding\n",
+      "Cosine Similarity: 0.35355\n",
+      "\n",
+      "\n",
+      "String: I make my hot chocolate with milk\n",
+      "Stirng: I will have a chai latte with milk\n",
+      "Cosine Similarity: 0.28868\n",
+      "\n",
+      "\n",
+      "String: I make my hot chocolate with milk\n",
+      "Stirng: There is a hot sale today\n",
+      "Cosine Similarity: 0.28868\n",
+      "\n",
+      "\n",
+      "String: One hot encoding\n",
+      "Stirng: I will have a chai latte with milk\n",
+      "Cosine Similarity: 0.0\n",
+      "\n",
+      "\n",
+      "String: One hot encoding\n",
+      "Stirng: There is a hot sale today\n",
+      "Cosine Similarity: 0.40825\n",
+      "\n",
+      "\n",
+      "String: I will have a chai latte with milk\n",
+      "Stirng: There is a hot sale today\n",
+      "Cosine Similarity: 0.0\n",
+      "\n"
      ]
     }
    ],
    "source": [
     "combos =[(corpus[a_index], corpus[b_index]) for (a_index, b_index) in pairs]\n",
     "for combo, cs in zip(combos, cs_list):\n",
-    "    print(i,\":\", cs)"
+    "    print(f\"\"\"\n",
+    "String: {combo[0]}\n",
+    "Stirng: {combo[1]}\n",
+    "Cosine Similarity: {cs}\\n\"\"\")"
    ]
   },
   {
