--- a/Programming for Data Science/PDS Test 1 Revision/Lab_02_Q6_to_Q10_StudentCopy.ipynb
+++ b/Programming for Data Science/PDS Test 1 Revision/Lab_02_Q6_to_Q10_StudentCopy.ipynb
@@ -36,33 +36,33 @@
     {
      "data": {
       "text/plain": [
-       "['Ankahi Kahaniya',\n",
+       "['Je Suis Karl',\n",
+       " 'My Little Pony: A New Generation',\n",
+       " 'The Stronghold',\n",
        " 'Minsara Kanavu',\n",
+       " 'Paranoia',\n",
+       " 'Go! Go! Cory Carson: Chrissy Takes the Wheel',\n",
+       " 'Avvai Shanmughi',\n",
+       " 'Ankahi Kahaniya',\n",
+       " 'Grown Ups',\n",
        " 'Bridgerton - The Afterparty',\n",
-       " 'The Father Who Moves Mountains',\n",
-       " 'Je Suis Karl',\n",
-       " 'The Starling',\n",
-       " 'Dark Skies',\n",
        " 'Spiderman',\n",
        " \"Europe's Most Dangerous Man: Otto Skorzeny in Spain\",\n",
-       " 'Go! Go! Cory Carson: Chrissy Takes the Wheel',\n",
        " 'Motu Patlu in the Game of Zones',\n",
-       " 'Grown Ups',\n",
-       " 'The Stronghold',\n",
-       " 'Paranoia',\n",
-       " 'Dick Johnson Is Dead',\n",
-       " 'Jeans',\n",
-       " 'Avvai Shanmughi',\n",
-       " 'Cobra Kai - The Afterparty',\n",
-       " 'The Circle - The Afterparty',\n",
-       " 'My Little Pony: A New Generation',\n",
-       " 'Intrusion',\n",
-       " 'Motu Patlu in Wonderland',\n",
        " 'Bling Empire - The Afterparty',\n",
-       " 'True: Winter Wishes',\n",
        " 'Sankofa',\n",
+       " 'Intrusion',\n",
+       " 'The Circle - The Afterparty',\n",
+       " 'Cobra Kai - The Afterparty',\n",
        " 'Samudri Lootere',\n",
-       " 'Confessions of an Invisible Girl']"
+       " 'Confessions of an Invisible Girl',\n",
+       " 'Motu Patlu in Wonderland',\n",
+       " 'The Starling',\n",
+       " 'True: Winter Wishes',\n",
+       " 'The Father Who Moves Mountains',\n",
+       " 'Dark Skies',\n",
+       " 'Jeans',\n",
+       " 'Dick Johnson Is Dead']"
       ]
      },
      "execution_count": 1,
@@ -103,32 +103,32 @@
     {
      "data": {
       "text/plain": [
-       "['Ankahi Kahaniya',\n",
-       " 'Minsara Kanavu',\n",
-       " 'Bridgerton - The Afterparty',\n",
-       " 'The Father Who Moves Mountains',\n",
-       " 'Je Suis Karl',\n",
-       " 'The Starling',\n",
-       " 'Dark Skies',\n",
-       " \"Europe's Most Dangerous Man: Otto Skorzeny in Spain\",\n",
-       " 'Go! Go! Cory Carson: Chrissy Takes the Wheel',\n",
-       " 'Motu Patlu in the Game of Zones',\n",
-       " 'Grown Ups',\n",
-       " 'The Stronghold',\n",
-       " 'Paranoia',\n",
-       " 'Dick Johnson Is Dead',\n",
-       " 'Jeans',\n",
-       " 'Avvai Shanmughi',\n",
-       " 'Cobra Kai - The Afterparty',\n",
-       " 'The Circle - The Afterparty',\n",
+       "['Je Suis Karl',\n",
        " 'My Little Pony: A New Generation',\n",
-       " 'Intrusion',\n",
-       " 'Motu Patlu in Wonderland',\n",
+       " 'The Stronghold',\n",
+       " 'Minsara Kanavu',\n",
+       " 'Paranoia',\n",
+       " 'Go! Go! Cory Carson: Chrissy Takes the Wheel',\n",
+       " 'Avvai Shanmughi',\n",
+       " 'Ankahi Kahaniya',\n",
+       " 'Grown Ups',\n",
+       " 'Bridgerton - The Afterparty',\n",
+       " \"Europe's Most Dangerous Man: Otto Skorzeny in Spain\",\n",
+       " 'Motu Patlu in the Game of Zones',\n",
        " 'Bling Empire - The Afterparty',\n",
-       " 'True: Winter Wishes',\n",
        " 'Sankofa',\n",
+       " 'Intrusion',\n",
+       " 'The Circle - The Afterparty',\n",
+       " 'Cobra Kai - The Afterparty',\n",
        " 'Samudri Lootere',\n",
-       " 'Confessions of an Invisible Girl']"
+       " 'Confessions of an Invisible Girl',\n",
+       " 'Motu Patlu in Wonderland',\n",
+       " 'The Starling',\n",
+       " 'True: Winter Wishes',\n",
+       " 'The Father Who Moves Mountains',\n",
+       " 'Dark Skies',\n",
+       " 'Jeans',\n",
+       " 'Dick Johnson Is Dead']"
       ]
      },
      "execution_count": 4,
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "33d484e8",
    "metadata": {},
    "outputs": [
@@ -320,7 +320,7 @@
        " 'Top Gun 2']"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "id": "1fd76b2d",
    "metadata": {},
    "outputs": [
