--- a/Natural Language Processing/Text Feature Engineering/practical.ipynb
+++ b/Natural Language Processing/Text Feature Engineering/practical.ipynb
@@ -1981,234 +1981,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>ain</th>\n",
-       "      <th>ask</th>\n",
-       "      <th>away</th>\n",
-       "      <th>awoken</th>\n",
-       "      <th>baby</th>\n",
-       "      <th>bag</th>\n",
-       "      <th>band</th>\n",
-       "      <th>beat</th>\n",
-       "      <th>beautiful</th>\n",
-       "      <th>believe</th>\n",
-       "      <th>...</th>\n",
-       "      <th>wildly</th>\n",
-       "      <th>wind</th>\n",
-       "      <th>won</th>\n",
-       "      <th>wonders</th>\n",
-       "      <th>words</th>\n",
-       "      <th>world</th>\n",
-       "      <th>worry</th>\n",
-       "      <th>yeah</th>\n",
-       "      <th>yes</th>\n",
-       "      <th>zoo</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>song</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>A Shot Of Rhythm And Blues</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Across The Universe</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>12</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>All I've Got To Do</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>6</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>And I Love Her</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>And Your Bird Can Sing</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 223 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                            ain  ask  away  awoken  baby  bag  band  beat  \\\n",
-       "song                                                                        \n",
-       "A Shot Of Rhythm And Blues    0    0     0       0     0    0     1     3   \n",
-       "Across The Universe           0    0     1       0     0    0     0     0   \n",
-       "All I've Got To Do            0    0     0       0     0    0     0     0   \n",
-       "And I Love Her                0    0     0       0     0    0     0     0   \n",
-       "And Your Bird Can Sing        0    0     0       1     0    0     0     0   \n",
-       "\n",
-       "                            beautiful  believe  ...  wildly  wind  won  \\\n",
-       "song                                            ...                      \n",
-       "A Shot Of Rhythm And Blues          0        0  ...       0     0    0   \n",
-       "Across The Universe                 0        0  ...       1     1    0   \n",
-       "All I've Got To Do                  0        0  ...       0     0    0   \n",
-       "And I Love Her                      0        0  ...       0     0    0   \n",
-       "And Your Bird Can Sing              0        0  ...       0     0    0   \n",
-       "\n",
-       "                            wonders  words  world  worry  yeah  yes  zoo  \n",
-       "song                                                                      \n",
-       "A Shot Of Rhythm And Blues        0      0      0      3     0    0    0  \n",
-       "Across The Universe               0      1     12      0     0    0    0  \n",
-       "All I've Got To Do                0      1      0      0     6    2    0  \n",
-       "And I Love Her                    0      0      0      0     0    0    0  \n",
-       "And Your Bird Can Sing            1      0      0      0     0    0    0  \n",
-       "\n",
-       "[5 rows x 223 columns]"
-      ]
-     },
-     "execution_count": 58,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "TypeError",
+     "evalue": "TfidfTransformer.__init__() got an unexpected keyword argument 'lowercase'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39msklearn\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mfeature_extraction\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mtext\u001b[39;00m \u001b[39mimport\u001b[39;00m TfidfTransformer\n\u001b[0;32m----> 3\u001b[0m cv\u001b[39m=\u001b[39mTfidfTransformer(lowercase\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m, ngram_range\u001b[39m=\u001b[39m(\u001b[39m1\u001b[39m,\u001b[39m1\u001b[39m),stop_words\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39menglish\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m      4\u001b[0m transform\u001b[39m=\u001b[39mcv\u001b[39m.\u001b[39mfit_transform(corpus)\n\u001b[1;32m      5\u001b[0m dt\u001b[39m=\u001b[39mpd\u001b[39m.\u001b[39mDataFrame(transform\u001b[39m.\u001b[39mtoarray(), columns\u001b[39m=\u001b[39mcv\u001b[39m.\u001b[39mget_feature_names_out())\u001b[39m.\u001b[39mset_index(beatles\u001b[39m.\u001b[39msong)\n",
+      "\u001b[0;31mTypeError\u001b[0m: TfidfTransformer.__init__() got an unexpected keyword argument 'lowercase'"
+     ]
     }
    ],
    "source": [
@@ -2694,7 +2479,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
