--- a/Natural Language Processing/Assignment/part2.ipynb
+++ b/Natural Language Processing/Assignment/part2.ipynb
@@ -599,31 +599,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "id": "72ed4ae3",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                     precision    recall  f1-score   support\n",
-      "\n",
-      " Black-naped Oriole       0.85      0.97      0.91        36\n",
-      "Collared Kingfisher       1.00      0.87      0.93        30\n",
-      "         Javan Myna       0.94      0.97      0.96        33\n",
-      "       Little Egret       0.91      0.83      0.87        24\n",
-      "\n",
-      "           accuracy                           0.92       123\n",
-      "          macro avg       0.93      0.91      0.92       123\n",
-      "       weighted avg       0.92      0.92      0.92       123\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.metrics import classification_report\n",
-    "print(classification_report(y_test, y_pred_cv, target_names=['Black-naped Oriole','Collared Kingfisher','Javan Myna','Little Egret']))"
+    "svm_results = classification_report(y_test, y_pred_cv, target_names=['Black-naped Oriole','Collared Kingfisher','Javan Myna','Little Egret'])"
    ]
   },
   {
